# KrakenMC

./: .gitignore  Cargo.toml  LICENSE  README.md  search.rs  test.bat
.github/: copilot-instructions.md
src/: config.rs  logger.rs  main.rs  test_events.rs  try_client.rs  try_player.rs  try_types.rs
src/chunk/: mod.rs
src/handlers/: mod.rs
src/mixins/: mod.rs
src/packet/: mod.rs
src/systems/: commands.rs  interactions.rs  mod.rs  persistence.rs
src/viakraken/: bedrock.rs  java.rs  mod.rs  proxy.rs  utils.rs
src/viakraken/java/: backend.rs  connection.rs  handoff.rs  mod.rs  packets.rs  protocol.rs  support.rs  types.rs
src/world/: mod.rs
