[package]
name = "kraken"
version = "0.1.0"
edition = "2021"
description = "High-performance Minecraft server"

[dependencies]
# Pointing to the 1.21 work branch
valence = { git = "https://github.com/valence-rs/valence", branch = "next-1.21" }
valence_command = { git = "https://github.com/valence-rs/valence", branch = "next-1.21" }
mimalloc = "0.1"
noise = "0.9"
flume = "0.11"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
owo-colors = "4"
chrono = "0.4.44"
bevy_log = "0.14"
sled = "0.34.7"
rayon = "1.12.0"
bytes = "1.11.1"
postcard = { version = "1.1.3", features = ["alloc"] }
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.1"
ctrlc = "3.5.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true # Further reduces binary size by removing debug symbols

