[package]
name = "kraken"
version = "0.1.0"
edition = "2021"
description = "High-performance Minecraft server"

[dependencies]
mimalloc = "0.1"
noise = "0.9"
flume = "0.11"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
owo-colors = "4"
chrono = "0.4.44"
bevy_log = "0.14"
sled = "0.34.7"
rayon = "1.12.0"
bytes = "1.11.1"
postcard = { version = "1.1.3", features = ["alloc"] }
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.1"
ctrlc = "3.5.2"
azalea = "0.16.0"
azalea-protocol = "0.16.0"
azalea-client = "0.16.0"
azalea-world = "0.16.0"
azalea-entity = "0.16.0"
azalea-core = "0.16.0"
azalea-inventory = "0.16.0"
azalea-block = "0.16.0"
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true # Further reduces binary size by removing debug symbols

